--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "spryker-community/queue-cli",
     "description": "SprykerCommunity queue cli tool",
     "type": "library",
+    "license": "MIT",
     "require": {
         "php": ">=8.1",
         "spryker/kernel": "^3.0.0",
